
// The following bugs have been fixed:

//* wsbuglink:5000[]
//* wsbuglink:6000[Wireshark bug]
//* cveidlink:2014-2486[]
//* Wireshark keeps banging out random chords on your piano and yelling “LIPS LIKE SUGUAR, SUGAR KISSES” because it was funny that one time at a party.

=== New and Updated Features

The following features are new (or have been significantly updated) since version 3.4.0:

* Protobuf fields that are not serialized on the wire (missing in capture files) can now be displayed with default values
  by setting the new 'add_default_value' preference. The default values might be explicitly declared in 'proto2' files,
  or false for bools, first value for enums, zero for numeric types.

// === Removed Features and Support

//=== Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters in the format
// "Full protocol name (Abbreviation)"
[commaize]
--
--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

// There is no new or updated capture file support in this release.
// Add one file type per line between the -- delimiters.
[commaize]
--
--

// === New and Updated Capture Interfaces support

//_Non-empty section placeholder._

// === Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages.
You can usually install or upgrade Wireshark using the package management system specific to that platform.
A list of third-party packages can be found on the
https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference files, plugins, SNMP MIBS, and RADIUS dictionaries.