@@ -31,6 +31,9 @@ See the “New and Updated Features” section below for more details.
 
 The following features are new (or have been significantly updated) since version 3.4.0:
 
+* TCP conversations now support a completeness criteria, which facilitates the identification of TCP streams having any
+  of opening or closing handshakes, a payload, in any combination. It is accessed with the new tcp.completeness filter.
+
 * Protobuf fields that are not serialized on the wire (missing in capture files) can now be displayed with default values
   by setting the new 'add_default_value' preference. The default values might be explicitly declared in 'proto2' files,
   or false for bools, first value for enums, zero for numeric types.
